add url project medac

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -7,7 +7,7 @@ const EXPERIENCIE = [
     company: 'MEDAC',
     description:
       'Desarrollé tanto en el backend como en el frontend con Express, Firebase – Firestore y Angular para la plataforma de feria de empleos de MEDAC. Las funcionalidades para permitir a los visitantes inscribirse en ofertas de trabajo, listarlas y editar su perfil. En el perfil de las empresas, la galería de empresas y sus stands. 🚀',
-    link: ''
+    link: 'https://salon-de-ferias-frontend.vercel.app/landing-page'
   },
   {
     date: '2024 - 2025',
