update about and hero

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -11,7 +11,7 @@ const personalImageAlt = 'Luis Rivas'
     <p>
       Me llamo Luis Edgar Rivas Bejarano, empecé en la programación
       desarrollando un <strong
-        >prototipo de equipo de control y monitoreo para riegos</strong
+        >prototipo de equipo de control y monitoreo de procesos agroindustriales</strong
       >. Que se integra a una API Rest y una aplicación web para automatizar la
       programación del riego.
     </p>
@@ -24,7 +24,7 @@ const personalImageAlt = 'Luis Rivas'
     </p>
 
     <p>
-      Actualmente estoy realizando un <strong
+      Recientemente realicé el <strong
         >Máster en Programación, Diseño Web y Experiencia de Usuario (UX/UI)</strong
       >. Con el objetivo de mejorar y ampliar mis conocimientos en el desarrollo
       de frontend.
