--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ import SocialPill from './SocialPill.astro'
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
     >
-      <Badge>Disponible para trabajar</Badge>
+      <Badge>Desarrollador Software</Badge>
     </a>
   </div>
   <h1
@@ -30,10 +30,10 @@ import SocialPill from './SocialPill.astro'
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    Desarrollador Web con habilidades en la <strong
-      >creación de sitios dinámicos y funcionales</strong
-    >. Capaz de traducir diseños creativos en interfaces interactivas y
-    amigables para el usuario.
+    <strong>Ingeniero Agrícola y Desarrollador de Software</strong> con visión estratégica,
+    especializado en la digitalización de procesos industriales. Cuento con una trayectoria
+    híbrida que combina el diseño de hardware para control de recursos (AgTech) con
+    el liderazgo técnico en el desarrollo de plataformas escalables y sistemas logísticos.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:rivasbejaranoluis@gmail.com">
