update link Envirapid

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -15,7 +15,7 @@ const EXPERIENCIE = [
     company: 'ENVIDRAPID S.A.S.',
     description:
       'Soy responsable tanto del diseño UX/UI como del desarrollo completo de una aplicación web destinada a mejorar la gestión del transporte de carga. Utilicé tecnologías como Node.js y React.js para construir una solución eficiente y escalable.',
-    link: 'https://app.envirapid.com.co/'
+    link: 'https://envirapid-user-app.vercel.app/'
   },
   {
     date: '2024',
